Fix appearance on larger screens
Custom media queries have been introduced for screens up to 1900px wide.
For larger screens, wide margins will be shown, but that's fine as
otherwise the text would be too stretched and no-one would be ever able
to read.

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -87,10 +87,10 @@ blockquote {
 }
 
 code {
-  font-family: 'Lucida Sans', Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal;
+  font-family: 'Lucida Sans', Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal, sans-serif;
   font-size:13px;
   color:#efefef;
-  text-shadow: 0px 1px 0px #000;
+  text-shadow: 0 1px 0 #000;
   margin: 0 4px;
   padding: 2px 6px;
   background: #333;
@@ -106,8 +106,8 @@ pre {
   overflow-y: hidden;
 
   code {
-    margin: 0px;
-    padding: 0px;
+    margin: 0;
+    padding: 0;
   }
 }
 
@@ -157,7 +157,7 @@ header {
   width: 100%;
   text-align: center;
   background: url(../img/background.png) #4276b6;
-  box-shadow: 1px 0px 2px rgba(0,0,0,.75);
+  box-shadow: 1px 0 2px rgba(0,0,0,.75);
   z-index:99;
   -webkit-font-smoothing:antialiased;
   min-height: 76px;
@@ -165,8 +165,8 @@ header {
   h1 {
     font: 40px/48px 'Josefin Sans', "Helvetica Neue", Helvetica, Arial, sans-serif;
     color: #f3f3f3;
-    text-shadow: 0px 2px 0px #235796;
-    margin: 0px;
+    text-shadow: 0 2px 0 #235796;
+    margin: 0;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -178,7 +178,7 @@ header {
     color: #d8d8d8;
     text-shadow:rgba(#000, 0.2) 0 1px 0;
     font-size: 18px;
-    margin: 0px;
+    margin: 0;
   }
 }
 
@@ -192,16 +192,15 @@ header {
   top: 115px;
   background: #ffcc00;
   border: 1px solid #f0b500;
-  box-shadow: 0px 1px 3px rgba(0,0,0,.25);
-  border-radius: 0px 2px 2px 0px;
+  box-shadow: 0 1px 3px rgba(0,0,0,.25);
+  border-radius: 0 2px 2px 0;
   padding-right: 10px;
 
   .button {
     border: 1px solid #dba500;
-    background: linear-gradient(rgb(255, 231, 136), rgb(255, 206, 56));
     border-radius: 2px;
-    box-shadow: inset 0px 1px 0px rgba(255,255,255,.4), 0px 1px 1px rgba(0,0,0,.1);
-    background-color: #FFE788;
+    box-shadow: inset 0 1px 0 rgba(255,255,255,.4), 0 1px 1px rgba(0,0,0,.1);
+    background: #FFE788 linear-gradient(rgb(255, 231, 136), rgb(255, 206, 56));
     margin-left: 5px;
     padding: 10px 12px;
     margin-top: 6px;
@@ -213,8 +212,7 @@ header {
     text-align:center;
 
     &:hover {
-      background: linear-gradient(rgb(255, 231, 136), rgb(255, 231, 136));
-      background-color: #ffeca0;
+      background: #ffeca0 linear-gradient(rgb(255, 231, 136), rgb(255, 231, 136));
     }
   }
 
@@ -269,13 +267,12 @@ header {
 section {
   width:590px;
   padding: 30px 30px 50px 30px;
-  margin: 20px 0;
-  margin-top: 190px;
+  margin: 190px 0 20px;
   position:relative;
   background: #fbfbfb;
   border-radius: 3px;
   border: 1px solid #cbcbcb;
-  box-shadow: 0px 1px 2px rgba(0,0,0,.09), inset 0px 0px 2px 2px rgba(255,255,255,.5), inset 0 0 5px 5px rgba(255,255,255,.4);
+  box-shadow: 0 1px 2px rgba(0,0,0,.09), inset 0 0 2px 2px rgba(255,255,255,.5), inset 0 0 5px 5px rgba(255,255,255,.4);
 }
 
 small {
@@ -329,17 +326,13 @@ nav {
   text-align: right;
 
   ul {
-    list-style: none;
-    list-style-image:none;
+    list-style: none none;
     font-size: 14px;
     line-height:24px;
 
     li {
       padding: 5px 0px;
       line-height: 16px;
-      // padding-right:17px;
-      // position:relative;
-      // right:-12px;
 
       &.tag-h1 {
         font-size: 1.2em;
@@ -381,6 +374,60 @@ footer {
   text-align: right;
   line-height: 16px;
 }
+
+
+@media screen and (min-width: 1400px) {
+  .wrapper {
+    width: 900px;
+  }
+  nav {
+    margin-left: -700px;
+  }
+  section {
+    width: 850px;
+  }
+  #banner {
+    margin-right: -500px;
+  }
+  footer {
+    margin-left: -650px;
+  }
+}
+@media screen and (min-width: 1600px) {
+  .wrapper {
+    width: 1100px;
+  }
+  nav {
+    margin-left: -800px;
+  }
+  section {
+    width: 1050px;
+  }
+  #banner {
+    margin-right: -600px;
+  }
+  footer {
+    margin-left: -750px;
+  }
+}
+@media screen and (min-width: 1900px) {
+  .wrapper {
+    width: 1200px;
+  }
+  nav {
+    margin-left: -850px;
+  }
+  section {
+    width: 1150px;
+  }
+  #banner {
+    margin-right: -700px;
+  }
+  footer {
+    margin-left: -800px;
+  }
+}
+
 
 @media print, screen and (min-width: 1060px) {
   #banner {
@@ -427,9 +474,7 @@ footer {
   }
 
   section {
-    border:1px solid #e5e5e5;
-    border-width:1px 0;
-    padding:20px auto;
+    padding:20px;
     margin: 190px auto 20px;
     max-width: 600px;
   }
@@ -471,7 +516,7 @@ footer {
     .menubutton {
       float: left;
       display: inline-block;
-      margin-left: 0px;
+      margin-left: 0;
       position:fixed;
       left:20px;
     }
@@ -479,7 +524,7 @@ footer {
 
   section {
     margin-top: 130px;
-    margin-bottom: 0px;
+    margin-bottom: 0;
     width: auto;
   }
 
@@ -493,8 +538,8 @@ footer {
   }
 
   header{
-    padding: 5px 0px;
-    min-height: 0px;
+    padding: 5px 0;
+    min-height: 0;
 
     h1 {
       font-size: 24px;
@@ -515,7 +560,7 @@ footer {
     .menubutton {
       float: left;
       display: inline-block;
-      margin-left: 0px;
+      margin-left: 0;
       position:fixed;
       left:20px;
     }
@@ -523,7 +568,7 @@ footer {
 
   section {
     margin-top: 130px;
-    margin-bottom: 0px;
+    margin-bottom: 0;
     width: auto;
   }
 }
